--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>J</span>
-        <span>A</span>
-        <span>D</span>
-        <span>I</span>
+        <span>S</span>
+        <span>O</span>
       </p>
     </div>
     <div class="six">
